==================================================
Title: 3.0.0 Development | Release 1
Version: 3.0.0
DevID:  2022.06.30.3.0.0
Date: 6/30/2022
Description: Updating the bot to discord.js V13. This is an EARLY DEVELOPMENT build! Nothing in this branch is official nor prone to working!

Additions/Changes:
1. Renamed Configuration.js to Config.js
2. 

Deletions:
1. 

Bug Fixes:
1. 

Dependencies & Security Patches:
1. Updated discord.js to V13
2. 

Notes: 
==================================================