@@ -1,0 +1,6 @@
+var Config = [
+    //=============================
+    //BotConfiguration=============
+        developerID = "",
+        prefix = "!",
+];
