@@ -2,10 +2,11 @@
 
 ![Latest Release](https://img.shields.io/github/v/release/theopcoder/HermitcraftBot?style=for-the-badge&include_prereleases) ![GitHub](https://img.shields.io/badge/GitHub-theopcoder-green?style=for-the-badge) [![CodeQL](https://github.com/theopcoder/HermitcraftBot/actions/workflows/codeql-analysis.yml/badge.svg)](https://github.com/theopcoder/HermitcraftBot/actions/workflows/codeql-analysis.yml)
 
-This is a custom Discord bot for Oakville SMP Discord Server.
+This is a custom Discord bot for Oakville SMP Discord Server.  
+https://discord.gg/AURDPCN
 
 Developer: theopcoder  
-Bot Version: 3.0.0 - WARNING UNDER ACTIVE DEVELOPMENT. UNOFFICIAL RELEASE! 
+Bot Version: 3.0.0 Early Development - WARNING UNDER ACTIVE DEVELOPMENT. UNOFFICIAL RELEASE! 
 BuildID: 2022.06.30.3.0.0
 
 # Website
@@ -13,19 +14,16 @@ Link: https://theopcoder.github.io/HermitcraftBot/
 
 # Dependencies Used
 
-**[12.5.3]** discord.js  
-[Documentation] https://discord.js.org/#/docs/main/stable/general/welcome
-
-
-Not Implemented Yet
-**[0.12.3]** discord.js-commando  
-[Documentation] https://discord.js.org/#/docs/commando/master/general/welcome
-
-**[7.1.3]** quick.db  
-[Documentation] https://quickdb.js.org/docs.html
+**[13.8.1]** discord.js  
+[Documentation] https://discord.js.org/#/docs/main/stable/general/welcome  
 
 **[4.1.2]** chalk  
 [Documentation] https://github.com/chalk/chalk#readme
+
+Not Implemented Yet  
+
+**[7.1.3]** quick.db  
+[Documentation] https://quickdb.js.org/docs.html
 
 **[2.1.3]** ms  
 [Documentation] https://github.com/vercel/ms#readme
