@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/theopcoder/HermitcraftBot#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "discord.js": "^13.8.1"
   }
 }
